--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
 
       <div class="links">
         <!-- Substitua os links abaixo -->
-        <a href="https://wa.me/SEUNUMERO?text=Olá%20Amoranna!%20Quero%20fazer%20um%20pedido%20🍬" target="_blank" rel="noopener">WhatsApp <i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://instagram.com/SEUPERFIL" target="_blank" rel="noopener">Instagram <i class="fa-brands fa-instagram"></i></a>
-        <a href="https://maps.google.com/?q=LOCALIZACAO" target="_blank" rel="noopener">Localização <i class="fa-solid fa-location-dot"></i></a>
+        <a href="https://wa.me/62982120055?text=Olá%20Amoranna!%20Quero%20fazer%20um%20pedido%20🍬" target="_blank" rel="noopener">WhatsApp <i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/amorannadoces/?igsh=OHl4OXZzb3Z4MWJ4#" target="_blank" rel="noopener">Instagram <i class="fa-brands fa-instagram"></i></a>
+        <a href="https://maps.app.goo.gl/CrCryQhtrQVQRgeFA" target="_blank" rel="noopener">Localização <i class="fa-solid fa-location-dot"></i></a>
       </div>
     </div>
   </section>
